# garlic

./: .env.example  .gitignore  .rusty-hook.toml  Cargo.toml  README.md  bun.lockb  package-lock.json  package.json  spec.yml  tsconfig.json  vite.config.ts
.github/workflows/: spec-test-ci.yml
.sqlx/: query-3d0f1f2f9dcc3f43ff945a86f064014b08336fbe11f8b86543068b6a7cef1c8e.json  query-bcf09ef289453f5154932824e6dd1cb4fe0ae643ba9452a5bc85c67dd3d4d7bb.json  query-e1e2df18fd7bf09abca88a83bd53021511ba77ec65a1224101d4503b93770a34.json
api/: Cargo.toml  spec.yml
api/src/: lib.rs  main.rs  users.rs
api_core/: Cargo.toml
api_core/src/: lib.rs
api_routes/: Cargo.toml
api_routes/src/: lib.rs
app/: bun.lockb  package.json  vite.config.ts
app/.svelte-kit/: ambient.d.ts
app/.svelte-kit/output/client/.vite/: manifest.json
app/.svelte-kit/output/server/: index.js  manifest-full.js
app/.svelte-kit/types/: route_meta_data.json
app/src/: hooks.server.ts
app/src/lib/common/: dark-mode.ts
app/src/routes/: +layout.svelte
app/src/tests/ci/: spec.test.ts
client/: bun.lockb  package.json
migrations/: 20250228091847_initial.sql
models/: Cargo.toml
models/src/: auth.rs  lib.rs  users.rs
server/: Cargo.toml
server/src/: create_api.rs  init_openapi_service.rs  main.rs
server/tests/: spec.rs
src/: app.css  main.rs
src/lib/: client.ts  index.ts
src/lib/client/: sdk.gen.ts  types.gen.ts
src/lib/components/: Center.svelte  Link.svelte
src/routes/: +layout.svelte  +page.svelte  page.svelte.test.ts
src/tests/: ci.test.ts
src/tests/ci/: spec.test.ts
(+36 files in other folders)
