[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.17.0"
poem-openapi.workspace = true
poem.workspace = true
sqlx.workspace = true
thiserror = "2.0.11"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.218", features = ["derive"] }
derived-deref = "2.1.0"
chrono = "0.4.40"
dotenvy_macro = "0.15.7"
