[package]
name = "server"
version = "0.1.39"
edition = "2021"

[dependencies]
api = { path = "../api" }
models = { path = "../models" }
poem-openapi = { workspace = true, features = ["swagger-ui"] }
poem.workspace = true
sqlx.workspace = true
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
